bad commit message, set up auth on users page and view

--- a/app/views/auth/login.erb
+++ b/app/views/auth/login.erb
@@ -1,5 +1,5 @@
 <form action="/login" method="post">
-  <input type="text" name="user[email]" placeholder="Your email here">
+  <input type="text" name="user[name]" placeholder="Your name here">
   <input type="password" name="user[password]" placeholder="Your password here">
   <input type="submit">
 </form>
