--- a/app/views/user/show.erb
+++ b/app/views/user/show.erb
@@ -1,5 +1,9 @@
 <% if current_user %>
 <h1><%=@user.name%>'s Page</h1>
+  <form action="/users/<%=@user.id%>" method="POST">
+    <input type="hidden" name="_method" value="DELETE">
+    <input type="submit" value="Delete Account">
+</form>
 <%end%>
 
 
