--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -24,8 +24,9 @@
   <header>
     <a href="/"><img src="/img/tumblr_lxtdi0BiHb1r9crd8o1_500.gif" class="logo"></a>
     <div id="login-toolbar">
-
+        <%if current_user%>
         <a href="/logout">Logout</a>
+        <%end%>
 
         <a href="/login">Login</a>
 
