Add categories button to page

--- a/app/views/user/show.erb
+++ b/app/views/user/show.erb
@@ -6,9 +6,14 @@
     <%= dream.content %>
   </a>
 <% end %>
+
   <form action="/users/<%=@user.id%>" method="POST">
     <input type="hidden" name="_method" value="DELETE">
     <input type="submit" value="Delete Account">
+  </form>
+
+<form action="/categories" method="GET">
+    <input type="submit" value="View All Categories">
 </form>
 <%end%>
 
