bad commit message

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -26,9 +26,9 @@
     <div id="login-toolbar">
         <%if current_user%>
         <a href="/logout">Logout</a>
-        <%end%>
-
+        <%else%>
         <a href="/login">Login</a>
+        <%end%>
 
   </header>
   <%= yield %>
