--- a/app/views/welcome.erb
+++ b/app/views/welcome.erb
@@ -1,4 +1,5 @@
 <h1>Lucidity</h1>
 
+<a href="/signup">Sign Up</a> | <a href="/login">Login</a>
 <h3>Please click below to sign up</h3>
 <a href="/signup">Create Account</a>
