--- a/public/css/application.css
+++ b/public/css/application.css
@@ -1,7 +1,13 @@
 /* CSS declarations go here */
 
+
 .user {
   font-style:italic;
+  font-size:15px;
+}
+
+.user-comment {
+  font-size:30px;
 }
 
 ul li {
@@ -12,3 +18,11 @@ ul li {
 #comment-box {
   padding-bottom:20px;
 }
+
+/*
+.logo {
+  width:100%;
+  height:100%;
+  float:bottom;
+}*/
+
