--- a/app/views/dream/current_dream.erb
+++ b/app/views/dream/current_dream.erb
@@ -1,1 +1,11 @@
 <h1><%= @current_dream.title %></h1>
+<p><%= @current_dream.content %></p>
+
+<% if session[:user_id] == @current_dream.user_id %>
+  <h3> i made this dream </h3>
+
+<% else %>
+
+  <h3> this is not my dream</h3>
+
+<%end%>
