--- a/app/views/comment/new.erb
+++ b/app/views/comment/new.erb
@@ -1,7 +1,7 @@
 <%if current_user%>
 <h3>Submit a comment</h3>
 <div id="new-comment-form">
-  <form action="/comment" method="POST">
+  <form action="../dreams/<%=@current_dream.id %>" method="POST">
     <div id="comment-box">
       <textarea rows="4" cols="50" name="comment[content]"></textarea>
     </div>
