--- a/app/views/auth/login.erb
+++ b/app/views/auth/login.erb
@@ -1,5 +1,13 @@
-<form action="/login" method="post">
-  <input type="text" name="user[name]" placeholder="Your name here">
-  <input type="password" name="user[password]" placeholder="Your password here">
-  <input type="submit">
-</form>
+
+<div id="login_box">
+	<% if current_user  %>
+		You are already logged in.
+	<% else %>
+	<form action="/login" method="post">
+		<div><input type="text" name="user[name]" placeholder="Username"></div>
+		<div><input type="password" name="user[password]" placeholder="Password"></div>
+		<div><input type="submit" value="Log In"></div>
+	</form>
+	<% end %>
+	
+</div>
