--- a/app/views/auth/signup.erb
+++ b/app/views/auth/signup.erb
@@ -1,6 +1,14 @@
-<form action="/signup" method="post">
-  <input type="text" name="user[name]" placeholder="Your name here">
-  <input type="password" name="user[password]" placeholder="Your password here">
-  <input type="password" name="user[password_confirmation]" placeholder="Confirm password">
-  <input type="submit">
-</form>
+<div id="login_box">
+	<% if current_user  %>
+	You are already logged in.
+	<% else %>
+	<form action="/signup" method="post">
+
+		<div><input type="text" name="user[name]" placeholder="Choose a username"></div>
+		<div><input type="password" name="user[password]" placeholder="Password"></div>
+		<div><input type="password" name="user[password_confirmation]" placeholder="Confirm password"></div>
+		<div><input type="submit" value="Sign Up"></div>
+	</form>
+	<% end %>
+</div>
+
