--- a/app/views/comment/new.erb
+++ b/app/views/comment/new.erb
@@ -6,7 +6,7 @@
       <textarea rows="4" cols="50" name="comment[content]"></textarea>
     </div>
     <div class="submit-button">
-      <input type="submit">
+      <input type="submit" value="Submit">
     </div>
   </form>
 </div>
