--- a/app/views/dream/current_dream.erb
+++ b/app/views/dream/current_dream.erb
@@ -19,7 +19,7 @@
 
   <%=erb :'comment/new', layout:false %>
 
-<h1><%= @current_dream.title %></h1>
+<!-- <h1><%= @current_dream.title %></h1>
 <p><%= @current_dream.content %></p>
 
 <% if session[:user_id] == @current_dream.user_id %>
@@ -29,4 +29,4 @@
 
   <h3> this is not my dream</h3>
 
-<%end%>
+<%end%> -->
