Fixed category_id not appearing on add dream get route

--- a/app/views/category/current_category.erb
+++ b/app/views/category/current_category.erb
@@ -6,6 +6,6 @@
 
 <% end %>
 
-<form action="/categories/:category_id/dreams/new" method="GET">
+<form action="/categories/<%= @current_category.id %>/dreams/new" method="GET">
    <input type="submit" value="Add Dream">
 </form>
