Updated button text on forms to replace default value

--- a/app/views/category/all_categories.erb
+++ b/app/views/category/all_categories.erb
@@ -1,5 +1,7 @@
 <h3>All Categories</h3>
 <% @categories.each do |category| %>
-<p><a href="/categories/<%=category.id %>"><%= category.title %></a></p>
+  <p>
+    <a href="/categories/<%=category.id %>"><%= category.title %></a>
+  </p>
 <% end %>
 
