--- a/app/views/category/category_form.erb
+++ b/app/views/category/category_form.erb
@@ -1,7 +1,6 @@
 <h3>Name Your Category: </h3>
+
 <form action="/categories" method="POST">
 	Title: <input type="text" name="title">
-	<input type="submit">
-
-
-</form>	
+	<input type="submit" value="Submit">
+</form>
