Modify Welcome page.

--- a/app/views/welcome.erb
+++ b/app/views/welcome.erb
@@ -8,7 +8,7 @@
 		<p><div class="clock"><%= Time.now.strftime "%H:%M" %></div></p>
 		
 		<p><i class="fa fa-cloud"></i>
-<input value="Title" type="text"></p>
+<input value="Dream Title" type="text"></p>
 		<textarea name="" id="" cols="30" rows="5">Type Your Dream Here.</textarea>
 
 		<% else %>
