--- a/app/views/welcome.erb
+++ b/app/views/welcome.erb
@@ -1,22 +1,34 @@
-<div id="banner">
+
+
+<header>
+    <div id="login-toolbar">
+        <%if current_user%>
+        <a href="/logout">Logout</a>
+        <%else%>
+        <a href="/login">Login</a>
+        <%end%>
+      </div>
+
+  </header><div id="banner">
 <h1>Lucidity allows you to share your dreams with the world.</h1>
-	<div class="box">
+  <div class="box">
 
-		<% if current_user %>
-			<h3>Record Your Dream</h3>
+    <% if current_user %>
+      <h3>Record Your Dream</h3>
 
-		<p><div class="clock"><%= Time.now.strftime "%H:%M" %></div></p>
-		
-		<p><i class="fa fa-cloud"></i>
-<input value="Dream Title" type="text"></p>
-		<textarea name="" id="" cols="30" rows="5">Type Your Dream Here.</textarea>
+    <p><div class="clock"><%= Time.now.strftime "%H:%M" %></div></p>
 
-		<% else %>
-		<p><h3>Share Your Dream Today!</h3></p>
-		<p><a href="/signup">Create an Account</a></p>
+    <p><i class="fa fa-cloud"></i>
+<input value="Title" type="text"></p>
+    <textarea name="" id="" cols="30" rows="5">Type Your Dream Here.</textarea>
 
-		<% end %>
-	</div>
+    <% else %>
+    <p><h3>Share Your Dream Today!</h3></p>
+    <p><a href="/signup">Create an Account</a></p>
+
+    <% end %>
+
+  </div>
+
 
 </div>
-
