finish login/singup views"

--- a/app/views/auth/login.erb
+++ b/app/views/auth/login.erb
@@ -1,13 +1,21 @@
 
-<h3>Signup. Dream on.</h3>
+<div><img style="height:200px;width:100%" src="http://i.imgur.com/hXfCgmH.png?1">
+  </div>
 
-<div class="singup_form">
+  <div style="height:75px;width:100%">
+  </div>
 
-<form action="/login" method="post">
-  <input type="text" name="user[name]" placeholder="Your name here">
-  <input type="password" name="user[password]" placeholder="Your password here">
-  <input type="submit">
-</form>
+  <div align="center">
+    <h3>Been Dreaming?</h3>
 
+    <div style="height:50px;width:100%">
+    </div>
 
-</div>
+    <div class="singup_form">
+      <form action="/login" method="post">
+        <input type="text" name="user[name]" placeholder="Your name here">
+        <input type="password" name="user[password]" placeholder="Your password here">
+        <input type="submit">
+      </form>
+    </div>
+  </div>
