--- a/app/views/auth/signup.erb
+++ b/app/views/auth/signup.erb
@@ -1,11 +1,18 @@
 
-<div><img style="height:200px;width:100%" src="http://photos-for-you.com/wp-content/uploads/2011/08/Billowing-Clouds-1-Black-White-Film.jpg">
+<div><img style="height:200px;width:100%" src="http://i.imgur.com/hXfCgmH.png?1">
+  </div>
+
+  <div style="height:75px;width:100%">
   </div>
 
 
-<div class="all" align="center">
+<div align="center">
 
   <h3>Signup. Dream on.</h3>
+
+  <div style="height:50px;width:100%">
+  </div>
+
 
   <div class="singup_form">
   <form action="/signup" method="post">
