--- a/app/views/user/show.erb
+++ b/app/views/user/show.erb
@@ -1,27 +1,37 @@
-<h1><%=@user.name%>'s Page</h1>
 
-<% @user.dreams do |dream| %>
-  <a href="/users/<%= users.id %>/dream/<%= dream.id %>">
-    <%= dream.content %>
-  </a>
-<% end %>
 
-<% if current_user %>
-<form action="/categories" method="GET">
-    <input type="submit" value="View All Categories">
-</form>
+<div><img style="height:200px;width:100%" src="http://i.imgur.com/hXfCgmH.png?1">
+</div>
 
-<br>
 
-<form action="/categories/new" method="GET">
-    <input type="submit" value="Add Category">
-</form>
+<container align="center">
+  <h1><%=@user.name%>'s Page</h1>
 
-<br>
+  <% @user.dreams do |dream| %>
+    <a href="/users/<%= users.id %>/dream/<%= dream.id %>">
+      <%= dream.content %>
+    </a>
+  <% end %>
 
-<form action="/users/<%=@user.id%>" method="POST">
-    <input type="hidden" name="_method" value="DELETE">
-    <input type="submit" value="Delete Account">
+  <% if current_user %>
+  <form action="/categories" method="GET">
+      <input type="submit" value="View All Categories">
   </form>
-<%end%>
 
+  <br>
+  <br>
+
+  <form action="/categories/new" method="GET">
+      <input type="submit" value="Add Category">
+  </form>
+
+  <br>
+  <br>
+
+  <form action="/users/<%=@user.id%>" method="POST">
+      <input type="hidden" name="_method" value="DELETE">
+      <input type="submit" value="Delete Account">
+    </form>
+  <%end%>
+
+</container>
