add styling to categories/all

--- a/app/views/user/show.erb
+++ b/app/views/user/show.erb
@@ -8,7 +8,11 @@
   <br>
   <br>
   <h1>Dream on <%=@user.name%></h1>
-
+  <% @user.dreams do |dream| %>
+  <a href="/users/<%= users.id %>/dreams/<%= dream.id %>">
+    <%= dream.content %>
+  </a>
+<% end %>
 
 
   <br>
