change category form view

--- a/app/views/category/category_form.erb
+++ b/app/views/category/category_form.erb
@@ -1,6 +1,25 @@
-<h3>Name Your Category: </h3>
+<container align="center">
 
-<form action="/categories" method="POST">
-	Title: <input type="text" name="title">
-	<input type="submit" value="Submit">
-</form>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+
+  <h1>Dreams have themes... </h1>
+  <br>
+  <hr width="50%">
+  <br>
+  <br>
+
+  <form action="/categories" method="POST">
+  	What was yours? <input  type="text" name="title">
+  	<input style="border:none; background:white" type="submit" value="Submit">
+  </form>
+
+
+</container>
