--- a/app/views/category/current_category.erb
+++ b/app/views/category/current_category.erb
@@ -6,7 +6,7 @@
   <hr width="50%">
 <% @dreams.each do |dream| %>
   <br>
- 	<h5><a href="<%=dream.category_id%>/dreams/<%=dream.id%>" style="text-decoration:none; color:black"><%= dream.title %></a> </h5>
+ 	<h5><a href="<%=dream.category_id%>/dreams/<%=dream.id%>" style="text-decoration:none; color:black; font-size:20px"><%= dream.title %></a> </h5>
   <br>
   <hr width="33%">
   <% end %>
