finish dream page view

--- a/app/views/dream/current_dream.erb
+++ b/app/views/dream/current_dream.erb
@@ -1,22 +1,8 @@
-<style type='text/css'>
-
-@font-face {
-    font-family: myFirstFont;
-    src: url(sansation_light.woff);
-}
-
-.title{
-    font-family: myFirstFont;
-}
-
-</style>
-
-
-
-
 <container align="center">
+  <br>
+  <br>
 
-  <div class="dream-title">
+  <div class="title">
     <h1><%=@current_dream.title%></h1>
   </div>
   <br>
