finish dream creation form

--- a/app/views/dream/dream_form.erb
+++ b/app/views/dream/dream_form.erb
@@ -1,7 +1,52 @@
-<h3>Been Dreaming?</h3>
 
-<form action="../dreams/new" method="POST">
-  Dream Title: <input type="text" name="title">
-  Describe the Dream: <input type="text" name="content">
-  <input type="submit" value="...I dreamed">
-</form>
+
+<container align="center">
+
+  <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+  <h1>Explain the dream</h1>
+  <br>
+    <br>
+    <br>
+  <br>
+  <hr width="50%">
+  <br>
+  <br>
+  <br>
+  <br>
+
+
+
+
+
+  <form action="../dreams/new" method="POST">
+   <input style="border:none; background:white" type="text" name="title"value="Title"><br>
+    <br>
+    <br>
+
+    <input  style="border:none; background:white; height:100px;"type="text" name="content" value="it went like this...">
+    <br>
+    <br>
+    <br>
+    <br>
+
+    <hr width="50%">
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+
+    <input  style="border:none; background:white"type="submit" value="Share the dream.">
+    <br>
+    <br>
+  </form>
+
+
+
+</container>
