fix comment form/post

--- a/app/views/comment/new.erb
+++ b/app/views/comment/new.erb
@@ -3,7 +3,7 @@
 <div id="new-comment-form">
   <form action="../dreams/<%=@current_dream.id %>" method="POST">
     <div id="comment-box">
-      <textarea rows="4" cols="50" name="comment[content]"></textarea>
+      <textarea rows="4" cols="50" name="content"></textarea>
     </div>
     <div class="submit-button">
       <input  style="border:none; background:white" type="submit" value="Submit">
