Fix welcome view

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -17,7 +17,7 @@
   <link href='http://fonts.googleapis.com/css?family=Vollkorn:400italic,400' rel='stylesheet' type='text/css'>
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-  <script src="/js/application.js"></script>
+  <script src="/js/application.js"></script> 
 
 
      <script src="/js/application.js"></script>
@@ -27,11 +27,21 @@
   <title></title>
 </head>
 <body>
+  <div id="content">
+    <header><span><a href="/">Lucidity</a></span>
+      <div id="login-toolbar">
+        <% if current_user  %>
+        <span>Hi <%= current_user.name %></span>
+        <a href="/users/<%= current_user.id %>">My Dashboard</a>
+        <a href="/logout">Logout</a>
+        <% else %>
+        <a href="/login">Login</a>
+        <a href="/signup">Signup</a>
+        <% end %>
+      </div>
 
-<div id="content">
-
-  <%= yield %>
-</div>
-
+    </header>
+    <%= yield %>
+  </div>
 </body>
 </html>
