--- a/app/views/welcome.erb
+++ b/app/views/welcome.erb
@@ -10,8 +10,8 @@
     <p><div class="clock"><%= Time.now.strftime "%H:%M" %></div></p>
 
     <p><i class="fa fa-cloud"></i>
-<input value="Title" type="text"></p>
-    <textarea name="" id="" cols="30" rows="5">Type Your Dream Here.</textarea>
+<input type="text" placeholder="Type your Dream Here."></p>
+    <textarea name="" id="" cols="30" rows="5">Type Your Title.</textarea>
 <% else %>
     <p><h3>Share Your Dream Today!</h3></p>
     <p><a href="/login">Sign In</a></p>
