--- a/public/css/application.css
+++ b/public/css/application.css
@@ -1,231 +1,37 @@
-<<<<<<< HEAD
 
 /* CSS declarations go here */
-=======
-header {
-  width: 98%;
-  background: rgba(3,3,3,.4);
->>>>>>> working on signup/login view
 
-  padding: 5px 1% 5px 1%;
 
+.user {
+  font-style:italic;
+  font-size:15px;
 }
-i {
-  color: white;
-}
-header a {
-  color: white;
-  text-shadow: 2px 2px #000;
-  padding-left: 5px;
-  padding-right: 5px;
-  text-decoration: none;
-  font-size: larger;
 
+.user-comment {
+  font-size:30px;
 }
-#login-toolbar {
-  float: right;
-}
-#banner {
-  background: #fff no-repeat top left url("/img/tumblr_lxtdi0BiHb1r9crd8o1_500.gif");
-  padding-top: 50px;
+
+ul li {
+  list-style-type: none;
   padding-bottom: 20px;
-  background-size: 100% auto;
-  height: 500px;
-
-
 }
 
-.clock {
-  color: white;
-  text-shadow: 2px 2px #000;
-  font-size: larger;
+#comment-box {
+  padding-bottom:20px;
 }
 
-.box input {
-  background: none;
-  border: 0;
-  color: white;
-  border-bottom: white solid 3px;
+/*
+.logo {
+  width:100%;
+  height:100%;
+  float:bottom;
+}*/
 
-}
-.box input:focus {
-/*   box-shadow: 0 0 5px rgba(81, 203, 238, 1);
-*/  outline: none;
-
-}
-
-.box textarea {
-  background: none;
-  border: 0;
-  color:white;
-}
-.box textarea:focus {
-  outline: none;
-}
-.box p {
-  color: white;
-}
-
-#banner h1 {
-  color: white;
-  text-shadow: 2px 2px #000;
-  text-align: center;
-
-}
-.box {
-  background: rgba(0,0,0,.4);
-  width: 25%;
-  /*position: relative;
-  top: 65%;*/
-  margin: auto;
-  border-radius: 5px;
-  border: 1px white solid;
-  text-align: center;
-  padding: 10px;
-  font-family: 'Josefin Sans', sans-serif;
-
-}
-
-.box h3 {
-  color: white;
-  text-shadow: 2px 2px #000;
-
-}
-.box a {
-  color: white;
-}
-
-#login_box {
-  border: 1px black solid;
-  width: 500px;
-  margin: auto;
-  position: relative;
-  top: 50px;
-  border-radius: 5px;
-  padding: 20px;
-
-  /* IE10 Consumer Preview */
-background-image: -ms-linear-gradient(top, #9E9E9E 0%, #7A6B6B 100%);
-
-/* Mozilla Firefox */
-background-image: -moz-linear-gradient(top, #9E9E9E 0%, #7A6B6B 100%);
-
-/* Opera */
-background-image: -o-linear-gradient(top, #9E9E9E 0%, #7A6B6B 100%);
-
-/* Webkit (Safari/Chrome 10) */
-background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #9E9E9E), color-stop(1, #7A6B6B));
-
-/* Webkit (Chrome 11+) */
-background-image: -webkit-linear-gradient(top, #9E9E9E 0%, #7A6B6B 100%);
-
-/* W3C Markup, IE10 Release Preview */
-background-image: linear-gradient(to bottom, #9E9E9E 0%, #7A6B6B 100%);
-}
-#login_box input{
-color: grey;
-border: 0;
-margin: 5px;
-padding: 5px;
-outline: none;
-border-radius: 5px;
-}
-#login_box input:focus{
-background: grey;
-color: white;
-}
-
-#login_box input[type="submit"]{
-  background: orange;
-  border-radius: 5px;
-  margin: 10px;
-  border: 1px white solid;
-    text-shadow: 2px 2px #000;
-
-  color: white;
-}
-
-#login_box form div {
-text-align: center;
-/*background: black;
-*/}
-
-/*Media Query 650px and 920px*/
-@media all and (min-width: 650px) and (max-width: 920px) {
-
-
-  .box {
-/*    background: red; */
-    background: rgba(3,3,3,.4);
-    width: 25%;
-    /*position: relative;
-    top: 65%;*/
-    margin: auto;
-    border-radius: 5px;
-    border: 1px white solid;
-    text-align: center;
-    padding: 10px;
-    font-family: 'Josefin Sans', sans-serif;
-
-  }
-  #banner h1 {
-    font-size: x-large;
-  }
-  .box h3 {
-    font-size: small;
-  }
-  .box a {
-  }
-
-
-}
-/*end of media query for medium height*/
-
-/*Media Query for 1px and 649px*/
-@media all and (min-width: 1px) and (max-width: 649px) {
-  header {
-    width: 100%;
-    background: rgba(3,3,3,.4);
-
-  }
-  header a {
-  font-size: small;
-
-  }
-
-  .box {
-/*    background: red; */
-    background: rgba(3,3,3,.4);
-    width: 40%;
-    /*position: relative;
-    top: 65%;*/
-    margin: auto;
-    border-radius: 5px;
-    border: 1px white solid;
-    text-align: center;
-    padding: 10px;
-    font-family: 'Josefin Sans', sans-serif;
-
-  }
-  #banner h1 {
-    font-size: medium;
-  }
-  .box h3 {
-    font-size: small;
-  }
-  div#banner {
-    padding: 5px;
-  }
-  .box a {
-    font-size: small;
-  }
-
-<<<<<<< HEAD
 /*CSS below for heights greater than 920 */
 
 header {
 	width: 98%;
-	background: none;
+	background: rgba(3,3,3,.4);
 	padding: 5px 1% 5px 1%;
 	position: absolute;
 }
@@ -245,18 +51,35 @@ header a {
 	float: right;
 }
 #banner {
-	background: #fff no-repeat top left url("/img/tumblr_lxtdi0BiHb1r9crd8o1_500.gif");
+	background: #fff repeat top left url("/img/starry.jpg");
 	padding-top: 50px;
 	padding-bottom: 20px;
 	background-size: 100% auto;
-	height: 500px;
+	height: 608px;
 
 	
 }
 
+#banner2 {
+		background: #fff repeat top left url("/img/starry.jpg");
+	padding-top: 50px;
+	padding-bottom: 20px;
+	background-size: 100% auto;
+	height: 200px;
+
+}
+
+#banner2 h1 {
+	padding-top: 50px;
+	text-align: center;
+	color: white;
+		text-shadow: 2px 2px #000;
+
+}
+
 .clock {
 	color: white;
-	text-shadow: 2px 2px #000;
+	text-shadow: 5px 5px rgba(73,73,73,.2);
 	font-size: larger;
 }
 
@@ -289,6 +112,7 @@ header a {
 	color: white;
 	text-shadow: 2px 2px #000;
 	text-align: center;
+	padding-top: 25px;
 
 }
 .box {
@@ -297,6 +121,7 @@ header a {
 	/*position: relative;
 	top: 65%;*/
 	margin: auto;
+	margin-top: 70px;
 	border-radius: 5px;
 	border: 1px white solid;
 	text-align: center;
@@ -443,7 +268,16 @@ text-align: center;
 
 }
 
+.container {
+	margin: 30px 300px;
+	background: pink;
+	}
 
-=======
+.container a, .container form {
+	text-align: center;
 }
->>>>>>> working on signup/login view
+
+.container div {
+	border-bottom: 1px black solid; 
+}
+
