--- a/app/views/dream/dream_form.erb
+++ b/app/views/dream/dream_form.erb
@@ -1,7 +1,7 @@
 
-
+<!-- #ZM DO Not Use align= / here instead do this in CSS -->
 <container align="center">
-
+<!-- #ZM WHaaattttttt isss thissssssss... please don't do this ever ever ever. Use CSS instead -->
   <br>
     <br>
     <br>
@@ -18,16 +18,11 @@
   <br>
   <br>
   <br>
-
-
-
-
-
   <form action="../dreams/new" method="POST">
    <input style="border:none; background:white" type="text" name="title"value="Title"><br>
     <br>
     <br>
-
+    <!-- #ZM This is called  INLINE STYLING, Never Never Never do this : ask me why later -->
     <input  style="border:none; background:white; height:100px;"type="text" name="content" value="it went like this...">
     <br>
     <br>
@@ -46,7 +41,4 @@
     <br>
     <br>
   </form>
-
-
-
 </container>
