--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -28,6 +28,7 @@
 </head>
 <body>
   <div id="content">
+  <!-- #ZM Way to much Logic in the layout.erb You should move this all to a partial and render the ERB -->
     <header><span><a href="/">Lucidity</a></span>
       <div id="login-toolbar">
         <% if current_user  %>
