--- a/app/views/welcome.erb
+++ b/app/views/welcome.erb
@@ -1,5 +1,3 @@
-
-
 <div id="banner">
 <h1>Lucidity allows you to share your dreams with the world.</h1>
   <div class="box">
@@ -10,6 +8,7 @@
     <p><div class="clock"><%= Time.now.strftime "%H:%M" %></div></p>
 
     <p><i class="fa fa-cloud"></i>
+    <!-- #ZM: Fix your indentation -->
 <input type="text" placeholder="Type your Dream Here."></p>
     <textarea name="" id="" cols="30" rows="5">Type Your Title.</textarea>
 <% else %>
